fix: upgrade SearchTransition for current Java